fixed scrolling issue while marky being created on mobile

--- a/app/style/customstyle.css
+++ b/app/style/customstyle.css
@@ -31,24 +31,24 @@
 }
 
 #hidden_input_container {
+    overflow: hidden;
     position: fixed;
     left: 0px;
-    bottom: 0px;
-    height: 10;
-    width: 10;
-    overflow: hidden;
+    bottom: 0;
+    height: 0;
+    width: 0;
     background-color: red;
 }
 
 #hidden_input {
-    position: relative;
-    left: 0px;
-    top: 0px;
-    width: 100;
-    height: 10;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 50px;
     padding: 0;
     border: 0;
-    background-color: red;
+    background-color: blue;
 }
 
 input[type="checkbox"] {
@@ -64,10 +64,15 @@ input[type="checkbox"] {
     padding-bottom: 2px;
     padding-left: 6px;
 }
+/*
 #footer {
     bottom: 0;
     position: fixed;
-    width: 100%;
+    width: 30px;
     height: 50px;
     background-color: yellowgreen;
 }
+*/
+/*
+html, body {height:100%;overflow:auto}
+*/
